--- a/evaluacion 1 (sucio).ipynb
+++ b/evaluacion 1 (sucio).ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 968,
    "id": "bb6c58fa",
    "metadata": {},
    "outputs": [],
@@ -169,8 +169,9 @@
     "            if producto['nombre'] == nombre:\n",
     "                producto['cantidad'] += cantidad\n",
     "                                         \n",
-    "        \n",
-    "        self.inventario.append(producto_nuevo)             \n",
+    "        else:\n",
+    "            nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
+    "            self.inventario.append(producto_nuevo)             \n",
     "        \n",
     "        for producto in self.inventario:          #ver si el prodcuto existe y añado cantidad o añado prodc\n",
     "            if producto['nombre'] == nombre:\n",
@@ -212,7 +213,15 @@
     "        \n",
     "        for producto in self.inventario:\n",
     "            total += producto[\"precio\"] * producto[\"cantidad\"] \n",
-    "            print(\"Valor total del inventario:\", total)                     #total calculado\n",
+    "            print(\"Valor total del inventario:\", total)                 #total calculado\n",
+    "            \n",
+    "                             \n",
+    "    def agregar_mas_productos(self, lista_productos):\n",
+    "\n",
+    "        for productos in lista_productos:\n",
+    "\n",
+    "            self.agregar_producto(productos[\"nombre\"], productos[\"precio\"], productos[\"cantidad\"])\n",
+    "                 \n",
     "                \n",
     "                #pasar a limpio\n",
     "        #el print tiene que ir aqui debajo del for porque si no me suma el valor de cada producto no el total   \n",
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 878,
+   "execution_count": 969,
    "id": "91f7d226",
    "metadata": {},
    "outputs": [],
@@ -238,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 879,
+   "execution_count": 970,
    "id": "55bb19ae",
    "metadata": {},
    "outputs": [
@@ -248,7 +257,7 @@
        "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 879,
+     "execution_count": 970,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 880,
+   "execution_count": 971,
    "id": "db68ac09",
    "metadata": {},
    "outputs": [],
@@ -269,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 881,
+   "execution_count": 972,
    "id": "8271797b",
    "metadata": {},
    "outputs": [
@@ -280,7 +289,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 881,
+     "execution_count": 972,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 882,
+   "execution_count": 973,
    "id": "6b795dc8",
    "metadata": {},
    "outputs": [],
@@ -301,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 883,
+   "execution_count": 974,
    "id": "60e5dfaa",
    "metadata": {},
    "outputs": [
@@ -313,7 +322,7 @@
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 883,
+     "execution_count": 974,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 884,
+   "execution_count": 975,
    "id": "d64896df",
    "metadata": {},
    "outputs": [],
@@ -334,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 885,
+   "execution_count": 976,
    "id": "03328f9e",
    "metadata": {},
    "outputs": [
@@ -342,11 +351,12 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120}],\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 885,
+     "execution_count": 976,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 886,
+   "execution_count": 977,
    "id": "78b6c333",
    "metadata": {},
    "outputs": [],
@@ -367,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 887,
+   "execution_count": 978,
    "id": "17598cff",
    "metadata": {},
    "outputs": [
@@ -375,12 +385,13 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 887,
+     "execution_count": 978,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 888,
+   "execution_count": 979,
    "id": "00fbb135",
    "metadata": {},
    "outputs": [],
@@ -401,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 889,
+   "execution_count": 980,
    "id": "d94d6a8f",
    "metadata": {},
    "outputs": [
@@ -409,13 +420,14 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60},\n",
        "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 889,
+     "execution_count": 980,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 890,
+   "execution_count": 981,
    "id": "41010796",
    "metadata": {},
    "outputs": [
@@ -443,7 +455,8 @@
      "output_type": "stream",
      "text": [
       "Nombre: camisa,Precio: $20,Cantidad: 80\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 160\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
       "Nombre: falda,Precio: $10,Cantidad: 60\n",
       "Nombre: jersey,Precio: $50,Cantidad: 34\n"
      ]
@@ -463,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 891,
+   "execution_count": 982,
    "id": "e5bc5992",
    "metadata": {},
    "outputs": [
@@ -481,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 892,
+   "execution_count": 983,
    "id": "2b673543",
    "metadata": {},
    "outputs": [
@@ -489,7 +502,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n"
+      "Nombre: pantalon,Precio: $20,Cantidad: 160\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n"
      ]
     }
    ],
@@ -499,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 893,
+   "execution_count": 984,
    "id": "834d2b92",
    "metadata": {},
    "outputs": [
@@ -525,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 894,
+   "execution_count": 985,
    "id": "379fd804",
    "metadata": {},
    "outputs": [
@@ -543,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 895,
+   "execution_count": 986,
    "id": "9c6939bd",
    "metadata": {},
    "outputs": [
@@ -561,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 896,
+   "execution_count": 987,
    "id": "412c49b6",
    "metadata": {},
    "outputs": [
@@ -569,6 +583,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " no esta en el inventario\n",
       " no esta en el inventario\n",
       " no esta en el inventario\n",
       " no esta en el inventario\n",
@@ -582,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 897,
+   "execution_count": 988,
    "id": "e653ca4a",
    "metadata": {},
    "outputs": [
@@ -590,13 +605,14 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60},\n",
        "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 897,
+     "execution_count": 988,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 898,
+   "execution_count": 989,
    "id": "c951c5e5",
    "metadata": {},
    "outputs": [
@@ -615,6 +631,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
       "producto eliminado\n"
@@ -627,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 899,
+   "execution_count": 990,
    "id": "13a21c48",
    "metadata": {},
    "outputs": [
@@ -636,7 +653,8 @@
      "output_type": "stream",
      "text": [
       "Nombre: camisa,Precio: $20,Cantidad: 130\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 120\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 160\n",
+      "Nombre: pantalon,Precio: $20,Cantidad: 40\n",
       "Nombre: jersey,Precio: $50,Cantidad: 34\n"
      ]
     }
@@ -647,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 900,
+   "execution_count": 991,
    "id": "6d5f1d24",
    "metadata": {},
    "outputs": [
@@ -655,6 +673,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n",
       "Producto no encontrado en el inventario\n"
@@ -667,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 901,
+   "execution_count": 992,
    "id": "cd8a7975",
    "metadata": {},
    "outputs": [
@@ -675,12 +694,13 @@
      "data": {
       "text/plain": [
        "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 120},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
        "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 901,
+     "execution_count": 992,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 902,
+   "execution_count": 993,
    "id": "cc51825b",
    "metadata": {},
    "outputs": [
@@ -700,8 +720,9 @@
      "output_type": "stream",
      "text": [
       "Valor total del inventario: 2600\n",
-      "Valor total del inventario: 5000\n",
-      "Valor total del inventario: 6700\n"
+      "Valor total del inventario: 5800\n",
+      "Valor total del inventario: 6600\n",
+      "Valor total del inventario: 8300\n"
      ]
     }
    ],
@@ -711,24 +732,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "05b2f000",
+   "execution_count": 994,
+   "id": "7d12931e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "productos_prueba = [{\"nombre\": \"leotardos\", \"precio\": 5, \"cantidad\": 20},\n",
+    "    {\"nombre\": \"sudadera\", \"precio\": 60, \"cantidad\": 100},\n",
+    "    {\"nombre\": \"gorra\", \"precio\": 10,\"cantidad\": 50},{\"nombre\": \"pijama\", \"precio\": 25, \"cantidad\":50}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 995,
+   "id": "794c461f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mi_tienda.agregar_mas_productos(productos_prueba)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 996,
+   "id": "37effa6f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Tiendaonline.calcular_valor_inventario() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[871]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmi_tienda\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcalcular_valor_inventario\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mpantalon\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mjersey\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[31mTypeError\u001b[39m: Tiendaonline.calcular_valor_inventario() takes 1 positional argument but 2 were given"
-     ]
+     "data": {
+      "text/plain": [
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 160},\n",
+       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'jersey', 'precio': 50, 'cantidad': 34},\n",
+       "  {'nombre': 'leotardos', 'precio': 5, 'cantidad': 40},\n",
+       "  {'nombre': 'sudadera', 'precio': 60, 'cantidad': 200},\n",
+       "  {'nombre': 'gorra', 'precio': 10, 'cantidad': 100},\n",
+       "  {'nombre': 'pijama', 'precio': 25, 'cantidad': 100}],\n",
+       " 'ventas_totales': 0.0}"
+      ]
+     },
+     "execution_count": 996,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mi_tienda.calcular_valor_inventario([\"pantalon\",\"jersey\"])            #queria probar si puedo sumar solo 2 productos"
+    "mi_tienda.__dict__"
    ]
   }
  ],
