--- a/evaluacion final mod1.ipynb
+++ b/evaluacion final mod1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 141,
    "id": "25d9e0a2",
    "metadata": {},
    "outputs": [],
@@ -18,15 +18,15 @@
     "        self.inventario.append(producto_nuevo)\n",
     "        for producto in self.inventario:\n",
     "            if producto['nombre'] == nombre:\n",
-    "                producto['cantidad'] += cantidad\n",
-    "                \n",
-    "            else:\n",
-    "                nuevo_producto = {'nombre': nombre,'precio': precio,'cantidad': cantidad}\n",
-    "        \n",
+    "                producto['cantidad'] = cantidad\n",
+    "                return\n",
+    "            \n",
+    "           \n",
     "    def ver_inventario(self):                   \n",
     "        for producto in self.inventario:\n",
     "            print(f\"Nombre: {producto['nombre']},\"f\"Precio: ${producto['precio']},\"f\"Cantidad: {producto['cantidad']}\")\n",
-    "    \n",
+    "            \n",
+    "                \n",
     "    def buscar_producto(self, nombre):\n",
     "        for producto in self.inventario:\n",
     "            if producto['nombre'] == nombre:\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 142,
    "id": "9718983e",
    "metadata": {},
    "outputs": [],
@@ -75,20 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 143,
    "id": "dda564e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 130},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'vestido', 'precio': 20, 'cantidad': 80}],\n",
-       " 'ventas_totales': 0.0}"
+       "{'inventario': [], 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 144,
    "id": "36231b1a",
    "metadata": {},
    "outputs": [],
@@ -117,18 +114,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 145,
    "id": "62f043cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,29 +136,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 146,
    "id": "60994233",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_tienda.agregar_producto(\"pantalon\",20, 40)"
+    "mi_tienda.agregar_producto(\"pantalon\",35, 72)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 147,
    "id": "10151210",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 35, 'cantidad': 72}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,41 +169,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 148,
    "id": "56f3a4bd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mi_tienda.agregar_producto(\"vestido\",20, 40) "
+    "mi_tienda.agregar_producto(\"vestido\",15, 18) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "d8a309b0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'vestido', 'precio': 20, 'cantidad': 80}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 35, 'cantidad': 72},\n",
+       "  {'nombre': 'vestido', 'precio': 15, 'cantidad': 18}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mi_tienda.__dict__            #se me ha añadido el pantalon 2 veces porque le di 2 veces sin querer al play"
+    "mi_tienda.__dict__            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 150,
    "id": "18032fce",
    "metadata": {},
    "outputs": [],
@@ -216,21 +213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 151,
    "id": "729cb934",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'pantalon', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'vestido', 'precio': 20, 'cantidad': 80},\n",
-       "  {'nombre': 'falda', 'precio': 10, 'cantidad': 60}],\n",
+       "{'inventario': [{'nombre': 'camisa', 'precio': 20, 'cantidad': 40},\n",
+       "  {'nombre': 'pantalon', 'precio': 35, 'cantidad': 72},\n",
+       "  {'nombre': 'vestido', 'precio': 15, 'cantidad': 18},\n",
+       "  {'nombre': 'falda', 'precio': 10, 'cantidad': 30}],\n",
        " 'ventas_totales': 0.0}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 152,
    "id": "eb1e4418",
    "metadata": {},
    "outputs": [
@@ -257,10 +254,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: camisa,Precio: $20,Cantidad: 80\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 80\n",
-      "Nombre: vestido,Precio: $20,Cantidad: 80\n",
-      "Nombre: falda,Precio: $10,Cantidad: 60\n"
+      "Nombre: camisa,Precio: $20,Cantidad: 40\n",
+      "Nombre: pantalon,Precio: $35,Cantidad: 72\n",
+      "Nombre: vestido,Precio: $15,Cantidad: 18\n",
+      "Nombre: falda,Precio: $10,Cantidad: 30\n"
      ]
     }
    ],
@@ -278,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 153,
    "id": "8ea82357",
    "metadata": {},
    "outputs": [
@@ -286,7 +283,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: camisa,Precio: $20,Cantidad: 80\n"
+      "Nombre: camisa,Precio: $20,Cantidad: 40\n"
      ]
     }
    ],
@@ -296,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 154,
    "id": "e1d0940c",
    "metadata": {},
    "outputs": [
@@ -304,7 +301,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: pantalon,Precio: $20,Cantidad: 80\n"
+      "Nombre: pantalon,Precio: $35,Cantidad: 72\n"
      ]
     }
    ],
@@ -314,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 155,
    "id": "b56d39e4",
    "metadata": {},
    "outputs": [
@@ -340,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 156,
    "id": "ee521b26",
    "metadata": {},
    "outputs": [
@@ -358,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 157,
    "id": "50bdbfde",
    "metadata": {},
    "outputs": [
@@ -366,7 +363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: camisa,Precio: $20,Cantidad: 130\n"
+      "Nombre: camisa,Precio: $20,Cantidad: 90\n"
      ]
     }
    ],
@@ -376,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 158,
    "id": "28b8e4c3",
    "metadata": {},
    "outputs": [
@@ -394,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 159,
    "id": "78dac6a5",
    "metadata": {},
    "outputs": [
@@ -402,7 +399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: falda,Precio: $10,Cantidad: 40\n"
+      "Nombre: falda,Precio: $10,Cantidad: 10\n"
      ]
     }
    ],
@@ -412,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 160,
    "id": "6d8b69a4",
    "metadata": {},
    "outputs": [
@@ -438,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 161,
    "id": "07b1e898",
    "metadata": {},
    "outputs": [
@@ -456,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 162,
    "id": "c9946bf8",
    "metadata": {},
    "outputs": [
@@ -464,9 +461,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: camisa,Precio: $20,Cantidad: 130\n",
-      "Nombre: pantalon,Precio: $20,Cantidad: 80\n",
-      "Nombre: vestido,Precio: $20,Cantidad: 80\n"
+      "Nombre: camisa,Precio: $20,Cantidad: 90\n",
+      "Nombre: pantalon,Precio: $35,Cantidad: 72\n",
+      "Nombre: vestido,Precio: $15,Cantidad: 18\n"
      ]
     }
    ],
@@ -476,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 163,
    "id": "2748cd75",
    "metadata": {},
    "outputs": [
@@ -502,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 164,
    "id": "142e1e49",
    "metadata": {},
    "outputs": [
@@ -510,7 +507,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valor total del inventario: 5800\n"
+      "Valor total del inventario: 4590\n"
      ]
     }
    ],
@@ -521,7 +518,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -535,7 +532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
